--- a/incremental-apis/composer.json
+++ b/incremental-apis/composer.json
@@ -27,7 +27,7 @@
     "autoload-dev": {
         "classmap": [
             "tests/TestCase.php",
-            "tests/ApiTester.php"
+            "tests/helpers"
         ]
     },
     "scripts": {
